--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,3 @@
 <app-cell *ngFor="let cell of listNumber" [id]="cell" (click)="clickBtn(cell)"></app-cell>
+<app-remain-bombs [remainBombs]="numRemainBombs"></app-remain-bombs>
+<app-bomb-counting [NumberOfBomb]="numBombs"></app-bomb-counting>
