--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h2>Minesweeper</h2>
-<app-board [title]="title"></app-board>
+<div class="main-container">
+  <h2>Minesweeper</h2>
+  <app-board [title]="title"></app-board>
+</div>
